# cy3240-i2c-bridge

./: .gitignore  AUTHORS  Makefile.am  README  configure.ac
aceunit/: LICENSE
aceunit/src/doc/: build.xml  catalogForAnt.xml  cleanupXhtml11.xslt  future.xhtml  glossary.xhtml  history.xhtml  manual.xhtml  start.xhtml  transform.xslt  xhtml2html.xslt
aceunit/src/doc/examples/sort/: sort.h  sortTest.c
aceunit/src/java/: AceUnit.ipr  build.xml
aceunit/src/java/src/prj/net/sf/aceunit/: CommentToWhitespaceReader.java  Fixture.java  GenTest.java  GenTest.properties  GenTest_de.properties  IdGenerator.java  MethodList.java  MethodList2.java  Pckg.java  SourceFiles.java  Suite.java  Test.java  TestCase.java  package-info.java
aceunit/src/java/src/tst/test/net/sf/aceunit/: CommentToWhitespaceReaderTest.java  FixtureTest.java  GenTestTest.java  IdGeneratorTest.java  MethodListTest.java  PckgTest.java  SuiteTest.java  package-info.java
aceunit/src/native/: AceUnit.c  AceUnit.h  AceUnitAnnotations.h  AceUnitAssert.h  AceUnitData.c  AceUnitData.h  AceUnitLoggerStub.c  AceUnitLogging.h  AceUnitMain.c  AceUnitPrintf.c  ExceptionHandling.c  ExceptionHandling.h  FullPlainLogger.c  JUnitXmlLogger.c  MiniRamLogger.c
aceunit/src/native/test/: common.mak
aceunit/src/native/test/basic/: RunTests.c
aceunit/src/native/test/basicEmbedded/: AceUnitTest.c  RunTests.c
aceunit/src/native/test/comment/: CommentTest.c  RunTests.c
aceunit/src/native/test/cplusplus/: AceUnitTest.c
aceunit/src/native/test/cplusplus2/: AceUnitTest.c  AceUnitTest2.cpp
aceunit/src/native/test/exhand/: TryExceptionHandling.c
aceunit/src/native/test/explicitMsg/: AceUnitTest.c  RunTests.c
aceunit/src/native/test/group/: GroupTest.c  RunTests.c
aceunit/src/native/test/longjmp/: LongJmpTest.c  RunTests.c
aceunit/src/native/test/loop/: AceUnitLoopTest.c  RunTests.c
aceunit/src/native/test/printf/: AceUnitPrintfTest.c
aceunit/src/native/test/recursive/C1/: C1Mod1.c  C1Mod2.c
aceunit/src/native/test/recursive/C1/tests/Mod1/: C1Mod1Test.c
aceunit/src/native/test/recursive/C1/tests/Mod2/: C1Mod2Test.c
aceunit/src/native/test/recursive/C2/: C2Mod1.c  C2Mod2.c
aceunit/src/native/test/recursive/C2/tests/Mod1/: C2Mod1Test.c
aceunit/src/native/test/recursive/C2/tests/Mod2/: C2Mod2Test.c
aceunit/src/native/test/twoFixtures/: Fixture1.c  Fixture2.c  RunTests.c
aceunit/src/native/test/xmlLog/: RunTests.c  XmlLogTest.c
data/: 49-hid-development.rules
doc/: USB_I2C_Bridge_Commands.iic
src/: cy3240.c  cy3240.h  cy3240_debug.c  cy3240_debug.h  cy3240_packet.h  cy3240_private_types.h  cy3240_types.h  cy3240_util.c  cy3240_util.h  i2c_demo.h  main.c
src/java/com/cypress/cy3240/: Cy3240BridgeController.java  Cy3240BusMode.java  Cy3240ClockSpeed.java  Cy3240ErrorCode.java  Cy3240JavaTest.java  Cy3240PowerMode.java
src/jni/: native_cy3240bridgecontroller.c  native_cy3240bridgecontroller.h
src/tests/: Suite1.c  readTest.c  readTest.h  reconfigTest.c  reconfigTest.h  unittest.c  unittest.h  writeTest.c  writeTest.h
